<resources>
    <string name="app_name">serverconnectionukaa</string>
    <string name="broker_hivemq_com">test.mosquitto.org</string>
    <string name="connect">Connect</string>
    <string name="not_connected">Not Connected</string>
    <string name="send">Send</string>
    <string name="received_message">Received Message</string>
    <string name="nan">NaN</string>
    <string name="mqtt_topic">test/yarik</string>
    <string name="hi">Hi</string>
    <string name="subscribe">Subscribe</string>
    <string name="mqtt_sensordata">test/yarikresult</string>
    <string name="connect_to_mqtt">Connect to MQTT</string>
    <string name="send_message_1">Send Message</string>
    <string name="incoming_messages">Incoming Messages</string>
    <string name="address">Address :</string>
    <string name="topic">Topic :</string>
    <string name="message">Message :</string>
    <string name="button">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>