<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.serverconnectionukaa.Main3Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:elevation="4dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/connect_to_mqtt"
                    android:textColor="#512da8"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/broker_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/broker_hivemq_com"
                        android:textColor="#424242"
                        tools:ignore="LabelFor" />

                </LinearLayout>

                <Button
                    android:id="@+id/connect_to_broker_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#7B1FA2"
                    android:text="@string/connect"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/connection_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/not_connected" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"

                android:elevation="4dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/send_message_1"
                    android:textColor="#512da8"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/topic"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/topic_to_send"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/mqtt_topic"
                        android:textColor="#424242"
                        tools:ignore="LabelFor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/message"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/text_to_send"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/hi"
                        android:textColor="#424242"
                        tools:ignore="LabelFor" />
                </LinearLayout>

                <Button
                    android:id="@+id/send_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#7B1FA2"
                    android:enabled="false"
                    android:text="@string/send"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"

                android:elevation="4dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/incoming_messages"
                    android:textColor="#512da8"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/topic"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/subscription_topic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@string/mqtt_sensordata"
                        android:textColor="#424242"
                        tools:ignore="LabelFor" />

                </LinearLayout>

                <Button
                    android:id="@+id/subscribe_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#7B1FA2"
                    android:enabled="false"
                    android:text="@string/subscribe"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/received_message" />

                <TextView
                    android:id="@+id/received_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="center"
                    android:text="@string/nan"
                    android:textColor="#424242"
                    android:textSize="32sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
